# remi

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
docs/: embed_dict.md
remi/: __init__.py  __main__.py
remi/command/core/: __init__.py  about.py  core.py  plugin_manager.py
remi/command/core/about/: __init__.py  about.py
remi/command/core/plugin_manager/: __init__.py  plg_man.py  plg_scan.py  scanner.py
remi/command/core/prefix/: __init__.py  prefix.py
remi/command/core/self/: __init__.py  self.py
remi/command/core/staff_role/: __init__.py  staff_role.py
remi/core/: __init__.py  banner.txt  bot.py  checks.py  config.py  constant.py  exceptions.py  help_command.py
remi/core/commands/: __init__.py  about.py  core.py  ext_manager.py  plugin_manager.py
remi/db/: __init__.py  engine.py  schema.py  util.py
remi/db/schema/: config.py
remi/res/: resource.py
remi/util/: __init__.py  embed.py  embed_typing.py  typing.py
tests/: test_embed.py  test_operator.py
