[tool.poetry]
name = "remi"
version = "0.1.0"
description = "A personal Discord bot for my Discord server"
authors = ["PythonTryHard <31789326+PythonTryHard@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
hikari = {extras = ["speedups"], version = "^2.0.0-alpha.104"}
hikari-lightbulb = "^2.1.0"
uvloop = [{ version = "^0.16.0", platform = "linux" }]
python-dotenv = "^0.19.2"
tzlocal = "^4.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
pudb = "^2021.2.2"
pylint = "^2.12.2"
python-dotenv = "^0.19.2"
pytest = "^6.2.5"
pytest-repeat = "^0.9.1"
isort = "^5.10.1"

[tool.poetry.scripts]
remi = 'remi:__main__.main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
