[tool.poetry]
name = "remi"
version = "0.1.0"
description = "A personal Discord bot for my Discord server"
authors = ["PythonTryHard <31789326+PythonTryHard@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
hikari = {extras = ["speedups", "server"], version = "^2.0.0-alpha.104"}
hikari-lightbulb = "^2.1.0"
uvloop = [{ version = "^0.16.0", platform = "linux" }]
python-dotenv = "^0.19.2"
tzlocal = "^4.1"
loguru = "^0.5.3"
SQLAlchemy = "^1.4.31"
aiosqlite = "^0.17.0"
rich = "^11.1.0"
click = "^8.0.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
pudb = "^2021.2.2"
pylint = "^2.12.2"
python-dotenv = "^0.19.2"
pytest = "^6.2.5"
pytest-repeat = "^0.9.1"
isort = "^5.10.1"
memory-profiler = "^0.60.0"
matplotlib = "^3.5.1"
cookiecutter = "^1.7.3"

[tool.poetry.scripts]
remi = 'remi:__main__.main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
